<resources>
    <string name="app_name">Ihr Route TDM</string>
    <string name="estacionDestino">Naar</string>
    <string name="estacionOrigen">Vertrek</string>
    <string name="encontrarRuta">Fjind ihr ruut</string>
    <string name="nombreMarca">Transports di Mitron</string>
    <string name="rutaEncontrada">Fjindi ruut</string>
    <string name="tiempoRuta">Will ruut duretjon</string>
    <string name="tomarLinea">Taag tu der linka</string>
    <string name="l1">Ocean</string>
    <string name="l2">Suburban</string>
    <string name="l3">Selva</string>
    <string name="l4">Larg di er Isotope</string>
    <string name="l5">Mitron Noord</string>
    <string name="l6">Mitron Zuid</string>
    <string name="l7">Larg di Southlands</string>
    <string name="l8">Circular di Mitron</string>
    <string name="T">Mitron Tram</string>
    <string name="C">Circular di Southlands</string>
    <string name="F">Funicular di Southlands</string>
    <string name="l7A">Mitron Ouest</string>
    <string name="l7B">Mitron Aeroport Express</string>
    <string name="tituloError">Keke</string>
    <string name="descripcionError">Nula ruut fjindi</string>
    <string name="buttonCalcular">Calcul ihr ruut</string>
    <string name="calcularOtraButton">Fijnd ein altre ruut</string>
    <string name="estacionRedTDM">TDM Network statjon</string>
    <string name="conexionCon">naar</string>
    <string name="buscarEstacion">Fjind ein station</string>
    <string name="textoBienvenida">Fjind tu tuhr ruut, van drie steps.</string>
    <string name="tarjeta">Karte</string>
    <string name="confirmacion">Huoje</string>
    <string name="datos">Data</string>
    <string name="infinity" translatable="false">Infinity</string>
    <string name="element" translatable="false">Element</string>
    <string name="infinity_descripcion">Tisar tu nee naar tuhr trippen</string>
    <string name="element_descripcion">Naiveet van ein karte</string>
    <string name="acreditar_condiciones_especiales">Lurar erytjunen conditjonnen</string>
    <string name="aceptar">Huoj</string>
    <string name="cancelar">Cancel</string>
    <string name="saldo">Lagraritisanen</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="nombre">Einerd</string>
    <string name="apellidos">Dierd(den)</string>
    <string name="discount" translatable="false">Discount</string>
    <string name="discount_descripcion">Naar hitonen mit enytjunen conditjonnen</string>
    <string name="selecciona_tipo_tarjeta">Select tu tuhr karte kind</string>
    <string name="debe_ser_mayor_que_cero">Mast is plusd van oolf</string>
    <string name="introduzca_nombre">Enput tu tuhr einerd</string>
    <string name="introduzca_apellidos">Enput tu tuhr dierd(den)</string>
    <string name="data_input_prompt">Enput tu tuhr data</string>
    <string name="selecciona_color">Select tu tuhr hjue</string>

</resources>
