<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CardBuy.CardBuyActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_buy_stepper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:paddingTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/frameLayout_buy_step_1"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="@id/nombre_paso_compra_1"
            app:layout_constraintStart_toStartOf="@id/nombre_paso_compra_1"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView_frameLayout_buy_step_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="1"
                android:textColor="@color/blanco" />
        </FrameLayout>

        <TextView
            android:id="@+id/nombre_paso_compra_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/tarjeta"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintEnd_toStartOf="@id/nombre_paso_compra_2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/frameLayout_buy_step_1" />

        <FrameLayout
            android:id="@+id/frameLayout_buy_step_2"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@color/gris"
            app:layout_constraintEnd_toEndOf="@id/nombre_paso_compra_2"
            app:layout_constraintStart_toStartOf="@id/nombre_paso_compra_2"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView_frameLayout_buy_step_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="2" />
        </FrameLayout>

        <TextView
            android:id="@+id/nombre_paso_compra_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/datos"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintEnd_toStartOf="@id/nombre_paso_compra_3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@id/nombre_paso_compra_1"
            app:layout_constraintTop_toBottomOf="@id/frameLayout_buy_step_2" />

        <FrameLayout
            android:id="@+id/frameLayout_buy_step_3"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@color/gris"
            app:layout_constraintEnd_toEndOf="@id/nombre_paso_compra_3"
            app:layout_constraintStart_toStartOf="@id/nombre_paso_compra_3"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView_frameLayout_buy_step_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="3" />
        </FrameLayout>

        <TextView
            android:id="@+id/nombre_paso_compra_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/confirmacion"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@id/nombre_paso_compra_2"
            app:layout_constraintTop_toBottomOf="@id/frameLayout_buy_step_3" />

        <View
            style="@style/Divider"
            android:layout_width="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@id/frameLayout_buy_step_1"
            app:layout_constraintEnd_toStartOf="@id/frameLayout_buy_step_2"
            app:layout_constraintStart_toEndOf="@id/frameLayout_buy_step_1"
            app:layout_constraintTop_toTopOf="@id/frameLayout_buy_step_1" />

        <View
            style="@style/Divider"
            android:layout_width="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@id/frameLayout_buy_step_1"
            app:layout_constraintEnd_toStartOf="@id/frameLayout_buy_step_3"
            app:layout_constraintStart_toEndOf="@id/frameLayout_buy_step_2"
            app:layout_constraintTop_toTopOf="@id/frameLayout_buy_step_1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/fragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@id/constraintLayout_buy_buttons_stepper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraintLayout_buy_stepper"
        tools:layout="@layout/fragment_card_buy_select" />

    <View
        style="@style/Divider"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/constraintLayout_buy_buttons_stepper" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_buy_buttons_stepper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button_card_buy_stepper_cancelar"
            style="@style/Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/cancelar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_card_buy_stepper_aceptar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_card_buy_stepper_aceptar"
            style="@style/Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:text="@string/aceptar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_card_buy_stepper_cancelar"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>